--- a/.github/workflows/update-mirror.yml
+++ b/.github/workflows/update-mirror.yml
@@ -19,7 +19,7 @@ jobs:
         run: node index.mjs
       - name: Create Pull Request
         id: cpr
-        uses: peter-evans/create-pull-request@v4.2.3
+        uses: peter-evans/create-pull-request@2b011faafdcbc9ceb11414d64d0573f37c774b04
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: Update mirror
